# ChangeLog for sys-power/powertop
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.102 2014/05/30 14:29:49 zerochaos Exp $

  30 May 2014; Rick Farina <zerochaos@gentoo.org> powertop-9999.ebuild:
  fix for bug 511740, tinfo patch merged upstream

*powertop-2.6 (17 May 2014)

  17 May 2014; Rick Farina <zerochaos@gentoo.org> +powertop-2.6.ebuild,
  powertop-9999.ebuild:
  version bump. tunables went nuts on me once and messed up the display but
  things are roughly working

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> powertop-2.5.ebuild:
  Stable for sparc, wrt bug #500036

  23 Feb 2014; Markus Meier <maekke@gentoo.org> powertop-2.5.ebuild:
  arm stable, bug #500036

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> powertop-2.5.ebuild:
  Stable for ppc, wrt bug #500036

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> powertop-2.5.ebuild:
  Stable for x86, wrt bug #500036

  14 Feb 2014; Chema Alonso <nimiux@gentoo.org> powertop-2.5.ebuild:
  Stable for amd64 wrt bug #500036

*powertop-2.5 (13 Dec 2013)

  13 Dec 2013; Rick Farina <zerochaos@gentoo.org> +powertop-2.5.ebuild:
  version bump, bug #493946

  03 Oct 2013; Rick Farina <zerochaos@gentoo.org> powertop-2.4.ebuild,
  powertop-9999.ebuild:
  proper fix for bug #486124, thanks again to Jer for pointing out obvious
  failure

  03 Oct 2013; Rick Farina <zerochaos@gentoo.org>
  +files/powertop-2.4-tinfo.patch, powertop-2.4.ebuild, powertop-9999.ebuild:
  fix for bug #486124 thanks to Jeroen

  06 Sep 2013; Markus Meier <maekke@gentoo.org> powertop-2.4.ebuild:
  arm stable, bug #445214

  06 Sep 2013; Agostino Sarubbo <ago@gentoo.org> powertop-2.4.ebuild:
  Stable for sparc, wrt bug #445214

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> powertop-2.4.ebuild:
  Stable for x86, wrt bug #445214

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> powertop-2.4.ebuild:
  Stable for ppc, wrt bug #445214
