@@ -10,30 +10,28 @@ AUX powertop-2.2-cpu-add-new-Intel-cpuid.patch 1308 SHA256 ac53965cebf261cea753e
 AUX powertop-2.2-use-package_version.patch 740 SHA256 40258728ae75fb0ba425bd1295ce88784ca03bde59ef52aa114a2269020f1cd8 SHA512 196a866d13999103a6c0d7b5e1b03ce0a11ce1c3a7550346b45bcbb5597b1080b0b9fbd7b18b5d66e2b9d140d5e7ec460cd8be4749bc52c7b904287a0e621999 WHIRLPOOL 715823eb0e936764ebfc5ad6c4bbc7b818f54c310081dd3112da2640923046582b4eaec8b8c0f85891adcf147b04fb25150d1322099664b75a091f39b3c729b5
 AUX powertop-2.4-tinfo.patch 580 SHA256 fc1c7238d5c386c0f28ff003e998b6657826f8b354d051caa45ff52168d162cb SHA512 51a075ec585a8bc33a8e91f5b808e6f7f8fb63f1b77f879dee75811b61e78ee105887e3a02edcb2ff7cd624216b7139572c81cbe2b54d8e4b06946a730b53a5d WHIRLPOOL 4fbc00dc642376c237746194b5ad46540a12aa2831d342b4c76f030ad6042ffd48b14ccc30009765de4ca733fce3ba8b5bf1dfc3f3922827aeebb7934099422a
 DIST powertop-1.13.tar.gz 104675 SHA256 2bc866089496877dd26d2d316ad5763ab8ecb5e28aefba44bc5d355dcdc58d98 SHA512 0c22a903da64798d987492336d57260372e03eab067ad94cf30b7640e9ee05e759a2fe9fa48fbdc35404cd2782b6b29d705e11e68452653b08f7f9df1a52be44 WHIRLPOOL 5ba44b84f49609f67c32563f75e20f6576c21a93fcb1ca99ebfe064475397602aa0f0fb9575e05b5a0290983791e7cf6ebae0139b39158b962e4b51027a6f5aa
-DIST powertop-2.4.tar.gz 632390 SHA256 42796c94546ae7f3d232e41b7fa09b2532396ca389908ff528870311db6327b7 SHA512 988732b199a288ef1b7c73e49857a7aab0fdc0b9f04a1d218e47fc9ba5e9af3da5bf91a4dc1473d33c9b83d7d238006a9786f4178d71cc21a6dad0c33b2cb864 WHIRLPOOL ee3d4b8671a08537cc6b178771699fb3215ef784120d33606f205c1b9c967a87a1e4bd6b948cc1fb651accb60b5ec832fda10d0deb05181087b15fc1a7a529c9
 DIST powertop-2.5.tar.gz 635979 SHA256 8b2c08a555d79e1c428863470c41cb023971d74ba4801d80a05e35adeec23c0b SHA512 696629fb6f5d0164da3ec2b259780dc635abc661de859e5e908debd3872c9a82024c0cc2dd8210c4cd1cf5586bf4238e31c3af29266f6a8ed8d90b1d876f04d8 WHIRLPOOL 5940b15ea4c5f09809e9a8febc11b1abe680df04469d75889c3a0cc0935a8c9d578d1f7c4ecaf2507cda74d574696a61b3bef21c6e30e9c768c09abf03436bcf
 DIST powertop-2.6.tar.gz 3024009 SHA256 3024c2b13c8f32cdac0b0ea9359eb5668dc9bd11776cf063481daa878533d1ee SHA512 7c44b9c49f74d0f415d0332b60629940e05cf1c9170a9a7b98427da630c25c0cc9c8ece49e059ec8c665847ff03fa8a341e0cf8f7ca792d889f2c52a39ddbb62 WHIRLPOOL eaa6e05d2fdb3050eb3a37f39fb5d760a8d3d91461b8c6f0ae825138080a0dd8a532e490a71246d62d2e340e3820b402d761a1331a6e7b6bc23db116c98cf0d9
 EBUILD powertop-1.13.ebuild 1158 SHA256 b996887bff17065a57aac201aac438a2c6310f5423109e4cb62de10c3e3dfdfd SHA512 c1ed8ee2fd7416138b9ab84072766071047e557ffc35fc57d32d8e4dc86f8986fa3a642f1875e2cf929eeabeb8a0b20025babc27808602b1123c970869c51146 WHIRLPOOL 570c6c80e97351859f9758b581a103a1a98d6c5ee58a63b4277431f21bcef9bed94ee35e3ed0193259a44978aa7aac717c597db4cba2aaa2d201ffe13998610f
-EBUILD powertop-2.4.ebuild 3384 SHA256 89b700e38e31b6f23923247f4e3727a6eb9bbe05cc988e6d1aa6abcf91dd4187 SHA512 a1de133cbcd1b9e732cc7e693e68454827b2fd709b336d51a623e845180633f8dde63c89763510916fbde2c8979032c1fc49ab1e8c9ad91f0926ebf4f0c21800 WHIRLPOOL 2576849f92ae6e3495c3643da5e46effaf4abb0b4388d63f9d627083fab6b8b977ff4022259f0abb4a3547df1099d8f2ba5a53eb60c9f2cea82bb04febe5c4b1
 EBUILD powertop-2.5.ebuild 3378 SHA256 7e59cf6687b3b6d6ae7c5045c508d2a5d4b37819783e9af419ba0826df167e40 SHA512 2cff8cfe282f475bcf32356073f0b34418e14b376d08c7353b8426bfb83198dfc411f6d2945b8bbe0ed4e4f228f62d6504d84c460c5cfba064e0afe47453b1f8 WHIRLPOOL 2a22cb3a1307a667dae0fe93f96f583cd20ce1b9b9fa8691d9f31d765cc1331022dc556b6599a11d4fde8e0ae95f2c2452d86284daf33a0bb822abda441c2d44
 EBUILD powertop-2.6.ebuild 3351 SHA256 a3b96aa70440916eec11cf8b12bacc11c66f63f6d21fba7fc036db6bb4601556 SHA512 58f7c1bcaded73a2acc45a47466069804dd91a7bef011398bde508ad044e72b9148770cdf543b6990297f119ec25ed28eca84ff0a5d392a649032384c33ff5e2 WHIRLPOOL a77acf094114574766d804538961ad2d0bb96dfa560e4a9e24c310eadfeef1aff0697f86765d9c1fc941a35beaff71e09e2d8a63f4a7ce7c74599cc68a245249
 EBUILD powertop-9999.ebuild 3284 SHA256 a9499b4db51632fcadb6e3840c456137b2d6ab1b659c92e932fe771c52ab9091 SHA512 27b4e7e00934a75502eb888a81aede48dcac32be7a8af203ed715d3d1312d191cda0d57d0d41f180b25a7ec7a0446fa49778812162194873d20ccf8695e33e65 WHIRLPOOL afac2120c3634f1e035c5b073a22ca9d5c0807f560986a4270f95d887a00b7ad19c71e47f0511991d9769400cf17cd22e6335e7e11b559add2787c86f6948966
-MISC ChangeLog 14903 SHA256 fec9e32556b5c8ebce42e6a5b80f8bcdb757d49fa3c7fd12df6dcf7ed9ae3f07 SHA512 4db20f6c4dfa32cfc1676888b242de30221ac7cd97f418db903cee95de1014aa46a20a1afe441c639550d46a85d7f76998831233d4939b32168b1254e63dba5a WHIRLPOOL 80a01ed757ac3c352748a7c37c3f6ab8e78912f1dbea57e39fc7d82ca70806b280188f33714021b713d445b210c961d11464db18d3ee657c9b29c3639e8c7366
+MISC ChangeLog 15029 SHA256 59785523b29bb08c2eea899d838f3540ded12f37a6952960fd34013140dffc8c SHA512 7e4eb7935ad3571952ed5cf038a3b418004a32aa7cc9a69cea52ddc91d13e121e2c65c69bdafad786ebc7daff0b4b6228d252e0ed8fe014297d82a584ce6e219 WHIRLPOOL 4ef782837ef3b41167fd6a23b965af92b0dec001e31850c8a8f1c5e6135f00aab63cd2471e87fb3218dbeb966789f4b16f7798e10432903acebb44d8a5c454a7
 MISC metadata.xml 239 SHA256 24d3268dbe675a5446456b139438c1bd59bd6190077399a4a715805ef28da3cc SHA512 2fa025f3394a125b4a92ee5fdb579bcfe74755f4e4306d90979bbb04c5239adfd2fdf9242ee7623642909597100ca88a6f6b7578a24512d976930fad186e10f9 WHIRLPOOL ab1b126e1a8170eba68412f8704d38ac7a479cb80a461cb2466ad87966ab8f78ddc04ce66341e5056df8c3aa21e3cf2c530a1f3236461bb502b91842089b49bb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCgAGBQJTiJZ7AAoJEKXdFCfdEflKIncQAJfzUAkseJcajnrxW6LQwg9D
-pGsYRhXraG7l/6KB/w1PM1e2yxiXW2FSOfgnTCqVg1Gu3Gp1+e7uslwHie2viJqU
-7Dbj0sNUctuarNWqKgBhF8SlOrmH9horqRKmzzTl+dKY3fjJHrn6xUkP7U1NP4gb
-qdORbbNvdNXw4Ten98ovjWYItQhfM7Jmt+onPgsgpfJ63qDrtz/RltMHpKnWKn7/
-aVEjclyGsWhIW+cJTkorMLgVXvSeBoYGa3ZGSVGSNHMht2To/aHGMlfKEbESYONg
-zfdSxrqqUFRBb/ro3P3i4IRbUxASkpV2cuR1UtKRC5xOkw5/3ss11nkE9pY9rh5G
-b+PooxeTGNFixFIskC24n0ozUMaE+M6JW8ZIiOP+hWgaNg0y7iyFTWwl8Fe/8ekd
-8wUkfE7c51do04nuz9aeJpE6m9u/s9n/Kt8P//QExTWTVnRpS9P94jCYZzVPsEDC
-2pjLyGh5iHFye0gMH0FKe8Ek4XMQL5zOdpV6++eXZqCn+M2eBpeiLTChvMWKln4g
-Cth6hDNY9Oh86hOHKV4eXzH47Ru20Re70563rlvokKlxIuwDQMLcbfP0u1xnBb2W
-6C7mF5Gj1t0g1l52KmpJLTv/5kSgRjtvJlsmOrrLp6IR6uZfOh2c9pfCB1fjXjNp
-oCtbcGjSN7MOdV02Sn4K
-=UVSd
+iQIcBAEBCgAGBQJT9291AAoJEKXdFCfdEflKCckP/igEv4JL7DY3MlPOITnkoo36
+iixlZnMiWVef62/UhU/if/X+/nVwMK7Znofw3Q3PJVQerO7L6KXqHQAdREaVp5Mw
+hSXLH7AZQuSlFdhYlxATaeRONUxRQLaTCDPaR898ynBmXkOMB0tdPdJXrGdshoB6
+qfnda76vxWQEFNhX9QlLb3I0uH0V2/gUcWOO2oRRT2ASGObNsKWoI0jbsj/MUygg
+g7dAhZCjBD0kf65D4Mrb/P9GUCxAsifI08sGp5vztEl1Ec3UzC5BcGL3zCEGT8Ct
+SC/ZxSiBXm2nmjO7SABzshYdM59qX8BkdMGkITz7yo5U0D4K4aSDN14Xx6f4Rpsl
+5fT9RfrrjXRZCccPvId1OeYIT4BSf6Qo2PYlxc22PSimTiUMlPBnfwbHUOORAS3q
+7czVNiHnQCNwM9VV+LrW9Sj3By8BrYsthyUqJxZQ6y++xPzd2hIn9WkzB1nSoIM7
+sDyzH0NAOMFUMBT68CDdjiYzXP2yb4FcCy9vY6Cj4Cjwi+dOG5bR63yyXwdHbSZm
+Zw/K2ey6MNlkGbR+r0Ev2jYsLCjr/Epmw50OYNDEee9aUBxERq0apkyKD9HkL+r2
+UzIyknCGQdPR0nxYflHyJcB9/D09Gt6Nedd+xGxwMEFUdQi/nipXS2zRmhKV58hC
+cBMqjUeSLpk8I3jPi79Y
+=qN4T
 -----END PGP SIGNATURE-----
